# garmin-explorer

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  Dockerfile  PLAN.md  PROJECT_STATUS.md  README.md  app.py  debug_activities.py  deploy.sh  docker-compose.yml  example.py  init-db.sql  main.py  pyproject.toml  requirements-freeze.txt  setup_system.py
.github/: copilot-instructions.md
app/: __init__.py  celery_app.py  tasks.py
app/api/v1/: api.py
app/api/v1/endpoints/: activities.py  auth.py  dashboard.py  digest.py  groups.py  simple_auth.py  users.py  whatsapp_digest.py
app/core/: config.py  database.py  deps.py  encryption.py  security.py
app/models/: __init__.py  activity.py  digest.py  group.py  user.py
app/services/: digest_service.py  garmin_service.py  simple_auth_service.py  whatsapp_service.py
docs/: DASHBOARD_README.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  LOCAL_TESTING_GUIDE.md  PHASE_2_SUMMARY.md  README.md  README_FINAL.md
lib/: cache.py  database.py  fake_data.py  garmin.py
pages/: dashboard.py  settings.py  stream.py
proto/authentication/: .gitignore  README.md  SHARING.md  cli_test.py  creds.example.json  pyproject.toml  server.py  start.sh
scripts/: cleanup_pre2026.py  daily_sync.py  test_auth.py  test_garmin_stats.py  test_garmin_sync.py  update_real_users.py
scripts/demos/: activity_example.js  demo_activity.py  quick_digest_demo.py
scripts/legacy/: setup.py  sleep_analysis.py
scripts/old/: generate_realistic_data.py  seed_test_data.py
scripts/tests/: final_simple_command.py  final_test.py  simple_debug.py  simple_digest_test.py  simple_test_command.py  test_dashboard_local.py  test_digest_direct.py  test_phase2.py  test_phase3.py  test_server.py
server/: garmin-explorer.service  garmin-sync.service  garmin-sync.timer  setup.sh
