[project]
name = "garmin-explorer"
version = "0.1.0"
description = "Comprehensive Python tool for analyzing and visualizing Garmin Connect data including running statistics, sleep patterns, and activity trends"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
keywords = [
    "garmin",
    "fitness",
    "data-analysis",
    "visualization",
    "running",
    "sleep",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "garminconnect>=0.2.28",
    "pandas>=2.3.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "plotly>=6.2.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0", "isort>=5.0", "flake8>=5.0"]

[project.urls]
Homepage = "https://github.com/your-username/garmin-explorer"
Repository = "https://github.com/your-username/garmin-explorer"
Documentation = "https://github.com/your-username/garmin-explorer#readme"
Issues = "https://github.com/your-username/garmin-explorer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all Python files in the root directory
include = ["*.py", "README.md", "LICENSE", ".env.example"]
